# oxidizePdf

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: TABLE_DETECTION_GUIDE.md
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: extract_text.rs  parse_document.rs
oxidize-pdf-core/: Cargo.toml
oxidize-pdf-core/examples/: gen_encryption_interop_base.rs  mesh_and_conic_shading.rs
oxidize-pdf-core/src/: page.rs
oxidize-pdf-core/tests/: analysis_spi_test.rs  element_types_test.rs  encryption_owner_password_test.rs  encryption_password_test.rs  fuzz_regressions_test.rs  hybrid_chunker_disjoint_test.rs  hybrid_chunking_test.rs  hybrid_chunking_v2_test.rs  issue_374_xref_reconstruction_test.rs  issue_375_merged_cells_detect_test.rs  issue_375_merged_cells_test.rs  issue_375_multi_level_header_test.rs  issue_375_text_conservation_test.rs  issue_376_contextual_chunks.rs  issue_377_token_counter_test.rs  issue_379_encrypt_metadata_test.rs  issue_380_aes256_owner_hash_test.rs  issue_381_tj_newline_test.rs  issue_382_extract_page_byte_limit.rs  issue_386_tz_pen_advance_test.rs  issue_389_flat_reorder_columns_test.rs  issue_390_flat_line_wrap_test.rs  issue_392_unicode_keyed_cyrillic_test.rs  issue_395_font_collision_test.rs  issue_403_column_scope_test.rs  issue_408_dense_prose_reorder_test.rs  issue_415_indirect_kids_test.rs  issue_417_column_line_grouping_test.rs  issue_422_column_boundary_alignment_test.rs  issue_427_char_boundary_test.rs  issue_441_same_line_backward_jump_test.rs  page_shadings_test.rs  (+17 more)
(+35 files in other folders)
